--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Karla:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
-  <body></body>
+  <body>
+    <h1>Test</h1>
+  </body>
 </html>
