--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Insure landing page</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/others/favicon-32x32.png" />
+
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.min.css">
   </head>
   <body>
-    <h1>Test</h1>
+    <header class="header">
+      <a href="#" class="logo">
+        <img class="logo__image" src="./assets/others/logo.svg" alt="Insure">
+      </a>
+      <button class="hamburger">
+        <span class="hamburger__inner">
+          <span class="hamburger__bar"></span>
+        </span>
+      </button>
+    </header>
+    
+    <main>
+      <section class="intro">
+        <img class="intro__image" src="./assets/images/image-intro-mobile.jpg" alt="Humanizing your insurance.">
+        <div class="intro__content">
+          <h1 class="intro__heading">Humanizing your insurance.</h1>
+          <p class="intro__paragraph">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that's right for you. Ensure you and your loved ones are protected.</p>
+          <button class="button">View plans</button>
+        </div>
+      </section>
+
+      <section class="about-us">
+        <h2 class="about-us__heading">We're different</h2>
+
+        <ul class="features">
+          <li class="features__item">
+            <img class="features__image" src="./assets/icons/icon-snappy-process.svg" alt="Snappy process">
+            <h3 class="features__heading">Snappy process</h3>
+            <p>Our application process can be completed in minutes, not hours. Don't get stuck filling in tedious forms.</p>
+          </li>
+          <li class="features__item">
+            <img class="features__image" src="./assets/icons/icon-affordable-prices.svg" alt="Affordable prices">
+            <h3 class="features__heading">Affordable prices</h3>
+            <p>We don't want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+          </li>
+          <li class="features__item">
+            <img class="features__image" src="./assets/icons/icon-people-first.svg" alt="People first">
+            <h3 class="features__heading">People first</h3>
+            <p>Our plans aren't full of conditions and clauses to prevent payouts. We make sure you're covered when you need it.</p>
+          </li>
+        </ul>
+
+        <div class="find-out-more">
+          <h2 class="find-out-more__heading">Find out more about how we work</h2>
+          <button class="button">How we work</button>
+        </div>
+      </section>
+
+      
+    </main>
   </body>
 </html>
